[tool.poetry]
name = "scaleway-tink"
version = "0.2.3"
description = "Extension to Tink Python that provides Scaleway's Key Manager integration"
license = "Apache-2.0"
authors = ["Scaleway <opensource@scaleway.com>"]
readme = "README.md"
homepage = "https://github.com/scaleway/tink-py-scwkms"
repository = "https://github.com/scaleway/tink-py-scwkms"
documentation = "https://github.com/scaleway/tink-py-scwkms"

[tool.poetry.dependencies]
python = "^3.8"
tink = "^1.10.0"
scaleway = "^2.7.0"
setuptools = "^78.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
